@@ -16,6 +16,8 @@ BUG: no bold text in help system on Borland
 
 BUG: free kbytes on download menu broken on Borland
 
+BUG: very first "login:" not emitted on host ssh server
+
 1.0.0
 -----
 
@@ -23,7 +25,6 @@ Detect xterm alternate screen and clear scrollback to retain what was
 seen before.
 
 CryptLib support
-  SSH server for host
   qodem knownhosts file
   Patches:
     env - send TERM and LANG
