@@ -10,6 +10,7 @@ qodem (1.0beta-1) unstable; urgency=low
   * Refactored status.h into qodem.h
   * Merged Linux, Xterm, and VT100 emulations into a single vt100.c
   * Avatar ansi fallback exposed in qodemrc
+  * SSH support switched to cryptlib
 
  -- Kevin Lamonte <lamonte@users.sourceforge.net>  Wed,  1 Jul 2015 18:50:00 -0500
 
